--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
         />
         <div class="info">
           <h1 class="info__name">Жак-Ив Кусто</h1>
-          <button type="submit" class="info__edit-button">
+          <button type="button" class="info__edit-button">
           </button>
           <p class="info__paragraph">Исследователь океана</p>
         </div>
-        <button type="submit" class="profile__button">
+        <button type="button" class="profile__button">
         </button>
       </section>
       <section class="photos">
@@ -35,7 +35,7 @@
           />
           <div class="element__container">
             <h2 class="element__title">Карачаевск</h2>
-            <button type="submit" class="element__like "></button>
+            <button type="button" class="element__like "></button>
           </div>
         </div>
         <div class="element">
@@ -46,7 +46,7 @@
           />
           <div class="element__container">
             <h2 class="element__title">Гора Эльбрус</h2>
-            <button type="submit" class="element__like"></button>
+            <button type="button" class="element__like"></button>
           </div>
         </div>
         <div class="element">
@@ -57,7 +57,7 @@
           />
           <div class="element__container">
             <h2 class="element__title">Домбай</h2>
-            <button type="submit" class="element__like"></button>
+            <button type="button" class="element__like"></button>
           </div>
         </div>
         <div class="element">
@@ -68,7 +68,7 @@
           />
           <div class="element__container">
             <h2 class="element__title">Гора эльбрус</h2>
-            <button type="submit" class="element__like"></button>
+            <button type="button" class="element__like"></button>
           </div>
         </div>
         <div class="element">
@@ -79,7 +79,7 @@
           />
           <div class="element__container">
             <h2 class="element__title">Домбай</h2>
-            <button type="submit" class="element__like"></button>
+            <button type="button" class="element__like"></button>
           </div>
         </div>
         <div class="element">
@@ -90,7 +90,7 @@
           />
           <div class="element__container">
             <h2 class="element__title">Карачаевск</h2>
-            <button type="submit" class="element__like"></button>
+            <button type="button" class="element__like"></button>
           </div>
         </div>
       </section>
@@ -99,9 +99,9 @@
       <p class="footer__copyright">© 2020 Mesto Russia</p>
     </footer>
     <div class="popup popup_opened">
-      <div class="form">
-        <form name="form">
-          <button type="submit" class="form__close">
+      <div class="popup__container">
+        <form class= "form" name="edit-profile">
+          <button type="button" class="form__close">
           </button>
           <h2 class="form__title">Редактировать профиль</h2>
           <div class="form__container">
