--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html class="html" lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -19,100 +19,93 @@
         />
         <div class="info">
           <h1 class="info__name">Жак-Ив Кусто</h1>
-          <button type="button" class="info__edit-button">
-          </button>
+          <button type="button" class="info__edit-button"></button>
           <p class="info__paragraph">Исследователь океана</p>
         </div>
-        <button type="button" class="profile__button">
-        </button>
+        <button type="button" class="profile__button"></button>
       </section>
       <section class="photos">
-        <div class="element">
-          <img
-            class="element__mask-group"
-            src="./image/kirill-pershin-1088404-unsplash.jpg"
-            alt="Картинка"
-          />
-          <div class="element__container">
-            <h2 class="element__title">Карачаевск</h2>
-            <button type="button" class="element__like "></button>
-          </div>
-        </div>
-        <div class="element">
-          <img
-            class="element__mask-group"
-            src="./image/kirill-pershin-1404681-unsplash.jpg"
-            alt="Картинка"
-          />
-          <div class="element__container">
-            <h2 class="element__title">Гора Эльбрус</h2>
-            <button type="button" class="element__like"></button>
-          </div>
-        </div>
-        <div class="element">
-          <img
-            class="element__mask-group"
-            src="./image/kirill-pershin-1556355-unsplash.jpg"
-            alt="Картинка"
-          />
-          <div class="element__container">
-            <h2 class="element__title">Домбай</h2>
-            <button type="button" class="element__like"></button>
-          </div>
-        </div>
-        <div class="element">
-          <img
-            class="element__mask-group"
-            src="./image/kirill-pershin-1556355-unsplash.jpg"
-            alt="Картинка"
-          />
-          <div class="element__container">
-            <h2 class="element__title">Гора эльбрус</h2>
-            <button type="button" class="element__like"></button>
-          </div>
-        </div>
-        <div class="element">
-          <img
-            class="element__mask-group"
-            src="./image/kirill-pershin-1088404-unsplash.jpg"
-            alt="Картинка"
-          />
-          <div class="element__container">
-            <h2 class="element__title">Домбай</h2>
-            <button type="button" class="element__like"></button>
-          </div>
-        </div>
-        <div class="element">
-          <img
-            class="element__mask-group"
-            src="./image/kirill-pershin-1404681-unsplash.jpg"
-            alt="Картинка"
-          />
-          <div class="element__container">
-            <h2 class="element__title">Карачаевск</h2>
-            <button type="button" class="element__like"></button>
-          </div>
-        </div>
       </section>
     </main>
     <footer class="footer">
       <p class="footer__copyright">© 2020 Mesto Russia</p>
     </footer>
-    <div class="popup popup_opened">
+    <div class="popup" id="popup-edit">
       <div class="popup__container">
-        <form class= "form" name="edit-profile">
-          <button type="button" class="form__close">
-          </button>
+        <form class="form" name="edit-profile" id="edit-profile">
+          <button type="button" class="form__close" id="profile_close"></button>
           <h2 class="form__title">Редактировать профиль</h2>
           <div class="form__container">
-            <input class="form__input " id="form_name"  type="text" name="name"  placeholder="Имя"/>
-            <input class="form__input" id="form_text" type="text" name="text"  placeholder="О себе"/>
+            <input
+              class="form__input"
+              id="form_name"
+              type="text"
+              name="name"
+              placeholder="Имя"
+            />
+            <input
+              class="form__input"
+              id="form_text"
+              type="text"
+              name="text"
+              placeholder="О себе"
+            />
           </div>
-          <button type="submit" class="form__save-button">
+          <button id="profile_save" type="submit" class="form__save-button">
             Сохранить
           </button>
         </form>
       </div>
     </div>
+    <div class="popup" id="popup-add">
+      <div class="popup__container">
+        <form class="form" name="add-img" id="add-img">
+          <button type="button" class="form__close" id="add_close"></button>
+          <h2 class="form__title">Новое Место</h2>
+          <div class="form__container">
+            <input
+              class="form__input"
+              id="form_empty_name"
+              type="text"
+              name="name"
+              placeholder="Название"
+            />
+            <input
+              class="form__input"
+              id="form_empty_link"
+              type="url"
+              name="href"
+              placeholder="Ссылка на картинку"
+            />
+          </div>
+          <button id="add_save" type="submit" class="form__save-button">
+            Создать
+          </button>
+        </form>
+      </div>
+    </div>
+    <div class="popup" id="popup-img">
+      <div class=" popup__img-container ">
+        <button type="button" class="popup__img-close" id="img_close"></button>
+        <img class="popup__img" src=""  alt="картинка" />
+        <h2 class="popup__img-title"></h2>
+      </div>
+    </div>
+    <template id="template">
+      <div class="element">
+        <img
+          class="element__mask-group"
+          src=""
+          alt="Картинка"
+        />
+        <button class="element__delete-button"></button>
+        <div class="element__container">
+          <h2 class="element__title">Гора Эльбрус</h2>
+          <button type="button" class="element__like"></button>
+        </div>
+      </div>
+    </template>
+    <script src="./script/constants.js"></script>
+    <script src="./script/script.js"></script>
   </body>
 </html>
