--- a/index.html
+++ b/index.html
@@ -32,8 +32,9 @@
     </footer>
     <div class="popup" id="popup-edit">
       <div class="popup__container">
+        <button type="button" class="popup__close" id="profile_close"></button>
         <form class="form" name="edit-profile" id="edit-profile">
-          <button type="button" class="form__close" id="profile_close"></button>
+
           <h2 class="form__title">Редактировать профиль</h2>
           <div class="form__container">
             <input
@@ -59,8 +60,9 @@
     </div>
     <div class="popup" id="popup-add">
       <div class="popup__container">
+        <button type="button" class="popup__close" id="add_close"></button>
         <form class="form" name="add-img" id="add-img">
-          <button type="button" class="form__close" id="add_close"></button>
+
           <h2 class="form__title">Новое Место</h2>
           <div class="form__container">
             <input
@@ -85,8 +87,8 @@
       </div>
     </div>
     <div class="popup" id="popup-img">
-      <div class=" popup__img-container ">
-        <button type="button" class="popup__img-close" id="img_close"></button>
+      <div class="popup__container_img">
+        <button type="button" class="popup__close" id="img_close"></button>
         <img class="popup__img" src=""  alt="картинка" />
         <h2 class="popup__img-title"></h2>
       </div>
