--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         </form>
       </div>
     </div>
-    <div class="popup" id="popup-img">
+    <div class="popup popup_img" id="popup-img">
       <div class="popup__container_img">
         <button type="button" class="popup__close" id="img_close"></button>
         <img class="popup__img" src=""  alt="картинка" />
