--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     <div class="popup popup_img" id="popup-img">
       <div class="popup__container_img">
         <button type="button" class="popup__close" id="img_close"></button>
-        <img class="popup__img" src=""  alt="картинка" />
+        <img class="popup__img" src="https://pictures.s3.yandex.net/frontend-developer/cards-compressed/arkhyz.jpg"  alt="картинка" />
         <h2 class="popup__img-title"></h2>
       </div>
     </div>
