--- a/src/index.html
+++ b/src/index.html
@@ -16,15 +16,24 @@
     </header>
     <main class="content">
       <section class="profile">
-        <img
-          class="profile__avatar"
-          src="<%=require('./image/image.jpg')%>"
-          alt="фото профиля"
+        <div class="profile__avatar-container ">
+        <button class="profile__avatar-button profile__avatar-button_active">
+          <img
+          class="profile__avatar-buttonIcon"
+          src="<%=require('./image/Vector5.svg')%>"
+          alt="иконка аватара"
         />
+        </button>
+        <img
+        class="profile__avatar"
+        src=""
+        alt="фото профиля"
+      />
+    </div>
         <div class="info">
-          <h1 class="info__name">Жак-Ив Кусто</h1>
+          <h1 class="info__name"></h1>
           <button type="button" class="info__edit-button"></button>
-          <p class="info__paragraph">Исследователь океана</p>
+          <p class="info__paragraph"></p>
         </div>
         <button type="button" class="profile__button"></button>
       </section>
@@ -77,7 +86,7 @@
     <div class="popup" id="popup-add">
       <div class="popup__container">
         <button type="button" class="popup__close" id="add_close"></button>
-        <form class="form" name="add-img" id="add-img" novalidate>
+        <form class="form" name="add-img" id="add-imgProfile" novalidate>
           <h2 class="form__title">Новое Место</h2>
           <div class="form__container">
             <div class="form__input-container">
@@ -118,9 +127,40 @@
         </form>
       </div>
     </div>
+
+    <div class="popup" id="popupImgProfile">
+      <div class="popup__container">
+        <button type="button" class="popup__close" id="imgProfileClose"></button>
+        <form class="form" name="add-img" id="add-img" novalidate>
+          <h2 class="form__title">Обновить Аватар</h2>
+          <div class="form__container">
+            <div class="form__input-container">
+              <input
+                class="form__input"
+                id="formAvatarProfileLink"
+                type="url"
+                name="href"
+                placeholder="Ссылка на картинку"
+                required
+                autocomplete="off"
+              />
+              <span id="formAvatarProfileLink-error" class="error"></span>
+            </div>
+          </div>
+          <button
+            id="AvatarProfileSave"
+            type="submit"
+            class="form__save-button form__save-button_disabled"
+            disabled
+          >
+            Сохранить
+          </button>
+        </form>
+      </div>
+    </div>
     <div class="popup popup_img" id="popup-img">
       <div class="popup__container_img">
-        <button type="button" class="popup__close" id="img_close"></button>
+        <button type="button" class="popup__close" id="img_close" ></button>
         <img
           class="popup__img"
           src="<%=require('./image/image.jpg')%>"
@@ -129,13 +169,17 @@
         <h2 class="popup__img-title"></h2>
       </div>
     </div>
+
     <template id="template">
       <div class="element">
         <img class="element__mask-group" src="" alt="Картинка" />
         <button class="element__delete-button"></button>
         <div class="element__container">
           <h2 class="element__title">Гора Эльбрус</h2>
-          <button type="button" class="element__like"></button>
+          <div>
+            <button type="button" class="element__like"></button>
+            <p class="element__like-count">0</p>
+          </div>
         </div>
       </div>
     </template>
