--- a/src/index.html
+++ b/src/index.html
@@ -148,7 +148,7 @@
             </div>
           </div>
           <button
-            id="AvatarProfileSave"
+            id="avatarProfileSave"
             type="submit"
             class="form__save-button form__save-button_disabled"
             disabled
